--- a/app/views/found_reports/_form.html.erb
+++ b/app/views/found_reports/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :location %>
+    <%= form.label :location last seen %>
     <%= form.text_field :location %>
   </div>
 
