--- a/app/views/lost_reports/_form.html.erb
+++ b/app/views/lost_reports/_form.html.erb
@@ -17,7 +17,7 @@
   </div>
 
   <div class="field">
-    <%= form.label :location %>
+    <%= form.label :location last seen %>
     <%= form.text_field :location %>
   </div>
 
@@ -42,12 +42,12 @@
   </div>
 
   <div class="field">
-    <%= form.label :additionalInfo %>
+    <%= form.label :any additional information %>
     <%= form.text_field :additionalInfo %>
   </div>
 
   <div class="field">
-    <%= form.label :reporter %>
+    <%= form.label :reported by %>
     <%= form.text_field :reporter %>
   </div>
 
