--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,11 @@
   <body>
   <div class='container'>
     <%= render 'layouts/navbar/nav' %>
+
     <%= yield %>
+
+    <!--<%= render 'layouts/footer/footer' %>-->
   </div>
+
   </body>
 </html>
