--- a/app/views/layouts/navbar/_nav.html.erb
+++ b/app/views/layouts/navbar/_nav.html.erb
@@ -1,25 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
  
-<!-- <%= link_to 'Pet Rescue', home_index_path, class: 'navbar-brand' %> -->
 <%= link_to image_tag("navbarLogo.PNG", border: 0), home_index_path, class: 'navbar-brand' %>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
 
   <div class="collapse navbar-collapse" id="navbarColor01">
-  <% if current_user %>
+  
    <ul class="navbar-nav mr-auto">
+   <% if current_user %>
+      <li class="nav-item">
+        <%= link_to 'Report a Pet', pet_reports_path, class: 'nav-link' %>
+      </li>
+    <% end %>
 
       <li class="nav-item">
-        <%= link_to 'Report Lost', losts_path, class: 'nav-link' %>
+        <%= link_to 'View All Missing', gallery_index_path, class: 'nav-link' %>
       </li>
 
-      <li class="nav-item">
-      <%= link_to 'Report Found', founds_path, class: 'nav-link' %>
-     </li>
-
     </ul>
-    <% end %>
 
     <!-- if user logged in show log out, else show register / log in options -->
     <ul class="navbar-nav ml-auto">
