--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,11 @@
 <div style="text-align: center">
-    <h1 style="margin:50px">Welcome to Pet Rescue</h1>
-    <blockquote class="blockquote text-center">
-        <p class="mb-0">"The greatness of a nation can be judged by the way its animals are treated."</p>
-        <footer class="blockquote-footer" style="margin:10px"><cite title="Source Title">Mahatma Gandhi</cite></footer>
-    </blockquote>
+    <!--<h1 style="margin:50px">Welcome to Pet Rescue</h1>-->
+    <%= image_tag('welcome.png', style: "height: 250px; width: 250px") %>
         <div>
             <%= image_tag('mainLogo.png', style: "height: 270px; width: 270px") %>
         </div>
+        <blockquote class="blockquote text-center">
+        <p class="mb-0">"The greatness of a nation can be judged by the way its animals are treated."</p>
+        <footer class="blockquote-footer" style="margin:10px"><cite title="Source Title">Mahatma Gandhi</cite></footer>
+    </blockquote>
     </div>
