--- a/app/views/pet_reports/_form.html.erb
+++ b/app/views/pet_reports/_form.html.erb
@@ -10,11 +10,11 @@
     <%= f.input :animal, :collection => %w[Dog Cat] %>
     <%= f.input :breed %>
     <%= f.input :colour %>
-    <%= f.hidden_field :image, value: @pet_report.cached_image_data %>
+    <%= image_tag f.object.image_url if f.object.cached_image_data %> <!--if image is cached, display it so user is aware-->
+    <%= f.hidden_field :image, value: @pet_report.cached_image_data %> <!--cache image data: prevents image being lost if form fails to upload (validation failure etc.)-->
     <%= f.file_field :image %>
     <p></p>
     <%= f.input :additionalInfo, label:'Additional Info' %>
-    <%= f.input :reportedBy, label:'Reported By' %>
   </div>
 
   <div class="form-actions">
