--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,5 +1,6 @@
+</br>
 <h2>Forgot your password?</h2>
-
+</br>
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= f.error_notification %>
 
@@ -7,12 +8,14 @@
     <%= f.input :email,
                 required: true,
                 autofocus: true,
-                input_html: { autocomplete: "email" } %>
+                input_html: { autocomplete: "email" },
+                label: false,
+                placeholder: "Email" %>
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Send me reset password instructions" %>
+    <%= f.button :submit, "Reset Password", class:"btn btn-success" %>
   </div>
+  <p></p>
+  <%= link_to "Back to Log in", new_session_path(resource_name), class:"btn btn-outline-primary" %>  <%= link_to "Back to Sign up", new_registration_path(resource_name), class:"btn btn-outline-primary" %>
 <% end %>
-
-<%= render "devise/shared/links" %>
