--- a/app/views/pet_reports/edit.html.erb
+++ b/app/views/pet_reports/edit.html.erb
@@ -1,6 +1,7 @@
 <h1>Edit Details</h1>
 
 <%= render 'form', pet_report: @pet_report %>
-
-<%= link_to 'Show', @pet_report %> |
-<%= link_to 'Back', pet_reports_path %>
+<div style='margin-top: 1%; margin-bottom: 1%; '>
+<!--<%= link_to 'Show', @pet_report, class:"btn btn-outline-primary" %>-->
+<%= link_to 'Back', pet_reports_path, class:"btn btn-outline-primary" %>
+</div>
