--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,6 +1,6 @@
 <%= simple_form_for [@pet_report, @pet_report.comments.build] do |f| %>
 
-    <%= f.input :body %>
-    <%= f.submit "Post Comment" %>
+    <%= f.input :body, label: "Add Comment:" %>
+    <%= f.submit "Post Comment", class: "btn btn-success" %>
 
 <% end %>
