--- a/app/views/pet_reports/new.html.erb
+++ b/app/views/pet_reports/new.html.erb
@@ -3,4 +3,4 @@
 </div>
 <%= render 'form', pet_report: @pet_report %>
 <p></p>
-<%= link_to 'Back', pet_reports_path, class: "btn btn-outline-primary" %>
+<%= link_to 'Back', gallery_index_path, class: "btn btn-outline-dark" %>
