--- a/app/views/pet_reports/show.html.erb
+++ b/app/views/pet_reports/show.html.erb
@@ -1,3 +1,4 @@
+<!-- view all details of a missing pet -->
 
 <br/>
 
@@ -28,7 +29,9 @@
   </div>
 
   <div style='margin-left:2%;'>
-  <%= image_tag @pet_report.image_url if @pet_report.image %>
+  <% if @pet_report.image %>
+  <%= image_tag @pet_report.image_url, style: "height: 350px; width: 350px"  %>
+  <% end %>
   </div>
 
   <div class="card-body">
@@ -42,6 +45,8 @@
   </ul>
 
 </div>
+ 
+<!-- comments section -->
 
 <div class="card-footer text-muted">
   <p>
