--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,10 +1,11 @@
 <p>
 <b><%= comment.username %></b>
 <%= comment.body %>
+- <%= comment.created_at %>
 
 <!-- if current user owns the comment, allow delete -->
 <% if comment.user_id == current_user.id %>
-    <%= link_to 'Delete', [comment.pet_report, comment], method: :delete, data: {confirm: "Are you sure you want to delete?"}, class: "btn btn-outline-danger" %>
+    <%= link_to 'Delete', [comment.pet_report, comment], method: :delete, data: {confirm: "Are you sure you want to delete?"}, class:"text-danger" %>
 <% end %>
 
 </p>
