--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,3 +1,4 @@
+</br>
 <h2>Change your password</h2>
 
 <%= simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
@@ -20,8 +21,8 @@
   </div>
 
   <div class="form-actions">
-    <%= f.button :submit, "Change my password" %>
+    <%= f.button :submit, "Change my password", class: "btn btn-success" %>
+    <p></p>
+    <%= link_to "Log in", new_session_path(resource_name), class:"btn btn-outline-primary" %> <%= link_to "Sign up", new_registration_path(resource_name), class:"btn btn-outline-primary" %>
   </div>
 <% end %>
-
-<%= render "devise/shared/links" %>
