--- a/app/views/pet_reports/edit.html.erb
+++ b/app/views/pet_reports/edit.html.erb
@@ -2,6 +2,5 @@
 
 <%= render 'form', pet_report: @pet_report %>
 <div style='margin-top: 1%; margin-bottom: 1%; '>
-<!--<%= link_to 'Show', @pet_report, class:"btn btn-outline-primary" %>-->
-<%= link_to 'Back', pet_reports_path, class:"btn btn-outline-primary" %>
+<%= link_to 'Back', gallery_index_path, class:"btn btn-outline-dark" %>
 </div>
