--- a/app/views/gallery/index.html.erb
+++ b/app/views/gallery/index.html.erb
@@ -1,41 +1,51 @@
 <div style="padding-top: 3%; padding-bottom: 3%; ">
-<h2>Currently Missing</h2>
-</br>
 
-<!--if user signed in allow report, otherwise redirect to log in-->
-<% if user_signed_in? %>
-  <%= link_to 'Report a Lost or Found Pet', new_pet_report_path, class:"btn btn-outline-dark mr-auto" %>
-<% else %>
-  <%= link_to 'Report a Lost or Found Pet', new_user_session_path, class:"btn btn-outline-dark", data: { confirm: 'You must be logged in to report a lost or found pet' } %>
-<% end %>
+  <h2>Currently Missing</h2>
+
+  <!-- Search Missing Pets -->
+  <%= form_tag gallery_index_path, class:"form-inline my-2 my-lg-0", :method => 'get' do %>
+    <%= text_field_tag :search, params[:search], class:"form-control mr-sm-2", placeholder:"Search by Breed" %>
+    <%= submit_tag "Search",  class:"btn btn-outline-secondary my-2 my-sm-0" %>
+  <% end %>
+
+  </br>
+
+  <!--if user signed in allow report, otherwise redirect to log in-->
+  <% if user_signed_in? %>
+    <%= link_to 'Report a Lost or Found Pet', new_pet_report_path, class:"btn btn-outline-dark mr-auto" %>
+  <% else %>
+    <%= link_to 'Report a Lost or Found Pet', new_user_session_path, class:"btn btn-outline-dark", data: { confirm: 'You must be logged in to report a lost or found pet' } %>
+  <% end %>
+
 </div>
 
 <div style="text-align: center; ">
-<% @pet_reports.each do |pet_report| %>
-<div class="card mb-3" style="width: 18rem; display: inline-block; margin: 2%; ">
-  <h3 class="card-header"><%= pet_report.reporting %></h3>
-  <div class="card-body">
-    <h5 class="card-title"><%= pet_report.location %></td>
-    </h5>
-    <h6 class="card-subtitle text-muted"><%= pet_report.animal %>, <%= pet_report.breed %></h6>
-  </div>
-  <div style="text-align: center;">
-  <%= image_tag pet_report.image_url, style: "height: 270px; width: 270px" %>
-  </div>
+  <% @pet_reports.each do |pet_report| %>
+    <div class="card mb-3" style="width: 18rem; display: inline-block; margin: 2%; ">
+      <h3 class="card-header"><%= pet_report.reporting %></h3>
 
-  <div class="card-body">
-    <!--if user signed in allow view, otherwise redirect to log in-->
-    <% if user_signed_in? %>
-      <%= link_to 'View', pet_report, class:"btn btn-outline-dark" %>
-    <% else %>
-      <%= link_to 'View', new_user_session_path, class:"btn btn-outline-dark", data: { confirm: 'You must be logged in to view details' } %>
-    <% end %>
-  </div>
+        <div class="card-body">
+          <h5 class="card-title"><%= pet_report.location %></td></h5>
+          <h6 class="card-subtitle text-muted"><%= pet_report.animal %>, <%= pet_report.breed %></h6>
+        </div>
 
-  <div class="card-footer text-muted">
-    Reported <%= pet_report.date %>
-  </div>
+        <div style="text-align: center;">
+          <%= image_tag pet_report.image_url, style: "height: 270px; width: 270px" %>
+        </div>
 
-</div>
-<% end %>
+        <div class="card-body">
+          <!--if user signed in allow view, otherwise redirect to log in-->
+          <% if user_signed_in? %>
+            <%= link_to 'View', pet_report, class:"btn btn-outline-dark" %>
+          <% else %>
+            <%= link_to 'View', new_user_session_path, class:"btn btn-outline-dark", data: { confirm: 'You must be logged in to view details' } %>
+          <% end %>
+        </div>
+
+        <div class="card-footer text-muted">
+          Reported <%= pet_report.date %>
+        </div>
+
+    </div>
+  <% end %>
 </div>
