--- a/app/views/layouts/navbar/_nav.html.erb
+++ b/app/views/layouts/navbar/_nav.html.erb
@@ -3,7 +3,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   
   <%= link_to image_tag("nav_logo_who2.PNG", border: 0), home_index_path, class: 'navbar-brand' %>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -14,7 +14,7 @@
         <li class="nav-item">
           <%= link_to 'Report Missing/Found', new_pet_report_path, class: 'nav-link' %>
         </li>
-        
+      
       <% end %>
 
         <li class="nav-item">
