--- a/app/views/layouts/navbar/_nav.html.erb
+++ b/app/views/layouts/navbar/_nav.html.erb
@@ -9,17 +9,22 @@
 
     <div class="collapse navbar-collapse" id="navbarColor01">
     
-    <ul class="navbar-nav mr-auto">
-    <% if current_user %>
-        <li class="nav-item">
-          <%= link_to 'Report Missing/Found', new_pet_report_path, class: 'nav-link' %>
-        </li>
-      
-      <% end %>
+      <ul class="navbar-nav mr-auto">
+        <% if current_user %>
+          <li class="nav-item">
+            <%= link_to 'Report Missing/Found', new_pet_report_path, class: 'nav-link' %>
+          </li>
+        <% end %>
 
         <li class="nav-item">
           <%= link_to 'View All Missing', gallery_index_path, class: 'nav-link' %>
         </li>
+
+        <% if current_user %>
+          <li class="nav-item">
+            <%= link_to 'Inbox', messages_path, class: 'nav-link' %>
+          </li>
+      <% end %>
 
       </ul>
 
